# oxidizer

./: .gitignore  .rubocop.yml  Cargo.toml  Gemfile  LICENSE.txt  README.md  Rakefile  mise.toml  oxidizer.gemspec
.github/workflows/: docs.yml  main.yml  release.yml
ext/oxidizer/: Cargo.toml  extconf.rb
ext/oxidizer/src/: lib.rs
lib/: oxidizer.rb
macros/: Cargo.toml
macros/src/: lib.rs
py/: Cargo.toml  mise.toml  pyproject.toml
py/src/: lib.rs
py/tests/: conftest.py  test_oxidizer.py  test_tzf.py
rb/: Cargo.toml  Rakefile  extconf.rb  tzfrb.gemspec
rb/ext/oxidizer/: Cargo.toml  extconf.rb
rb/ext/oxidizer/src/: lib.rs
rb/ext/tzf/: extconf.rb
rb/lib/oxidizer/: version.rb
rb/sig/: tzf.rbs
rb/spec/: oxidizer_spec.rb  tzf_spec.rb
sig/: oxidizer.rbs
spec/: oxidizer_spec.rb  spec_helper.rb
src/: lib.rs  oxide.rs  oxidizer.rs
