[package]
name = "oxidizer"
version = "0.1.0"
edition = "2021"
authors = ["uvlad7 <uvlad7@gmail.com>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = { version = "0.6.2", optional = true }
pyo3 = { version = "0.24.0", optional = true }

[features]
ext-magnus = ["dep:magnus"]
ext-pyo3 = ["dep:pyo3"]
