[package]
name = "oxidizer"
version = "0.1.0"
edition = "2021"
authors = ["uvlad7 <uvlad7@gmail.com>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = { version = "0.7.1", optional = true }
pyo3 = { version = "0.25.0", optional = true }
oxidizer-macros = { version = "0.1.0", path = "macros" }
paste = "1"
lazy_static = "1.5.0"
tzf-rs = { version = "1.0.0", default-features = false }

[features]
ext-magnus = ["dep:magnus"]
ext-pyo3 = ["dep:pyo3"]

[workspace]
members = ["macros"]
