[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "oxidizer-py"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
[tool.maturin]
features = ["pyo3/extension-module", "ext-pyo3"]
module-name = 'oxidizer'

# pip install -e '.[dev]'
[project.optional-dependencies]
dev = [
    "ipython>=9.2.0", "pytest>=8.3.5", "maturin>=1.8.6",
]

[tool.pytest.ini_options]
testpaths = "tests"
