[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "tzfpy"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
[tool.maturin]
features = ["pyo3/extension-module", "ext-pyo3"]
module-name = 'tzf'

# pip install -e '.[dev]'
[project.optional-dependencies]
dev = [
    "ipython>=9.2.0", "pytest>=8.3.5", "maturin>=1.8.6", "maturin_import_hook>=0.2.0",
]

[tool.pytest.ini_options]
testpaths = "tests"
